# qtQmlProjCalc

./: .gitignore  CMakeLists.txt  Main.qml  README.md  generateDEB.sh  generateRPM.sh  main.cpp  qtqmlproj.desktop  qtqmlproj_calc.desktop  qtqmlprojcalc.desktop
Controllers/: CalcController.cpp  CalcController.h
InstallScripts/: postinst.sh  prerm.sh  qtqmlprojcalc.desktop
QmlComponents/: BasicCalcColumnLayout.qml  ButtonBase.qml  EqualButton.qml  NumberButton.qml  OperationButton.qml
QmlComponents/Buttons/: BackButton.qml  ButtonBase.qml  EqualButton.qml  NumberButton.qml  OperationButton.qml
QmlComponents/Layouts/: BasicCalcColumnLayout.qml  WindowBaseLayout.qml
QmlComponents/Outputs/: CalcOutput.qml  CalcPartialOutput.qml
QmlComponents/Scripts/: localeLogic.js
controllers/: calccontroller.cpp
